--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -45,9 +45,9 @@ eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 farming-rpc = { path = "../pallets/farming/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
 vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
-beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier" }
-beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier" }
-substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier" }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge" }
+beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge" }
+substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge" }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
@@ -104,7 +104,7 @@ sp-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", branc
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
 beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
 pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
-leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier" }
+leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge" }
 sc-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 bridge-channel-rpc = { path = "../pallets/trustless-eth-bridge/channel/rpc" }
 
