--- a/pallets/trustless-eth-bridge/ethereum-light-client/Cargo.toml
+++ b/pallets/trustless-eth-bridge/ethereum-light-client/Cargo.toml
@@ -27,14 +27,14 @@ sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot
 sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge", default-features = false }
 
 ethash = { git = "https://github.com/sora-xor/ethash.git", branch = "sora-v1.6.0", default-features = false }
 
 common = { path = "../../../common", default-features = false }
 
 [dev-dependencies]
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier", features = [
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge", features = [
     "test",
 ] }
 sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
