--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 ethereum-gen = { path = "./ethereum-gen" }
 substrate-gen = { path = "./substrate-gen" }
 parachain-gen = { path = "./parachain-gen" }
-beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier", default-features = false }
-bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier", default-features = false }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier" }
-leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier" }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge", default-features = false }
+bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge" }
+leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge" }
 ethers = { git = "https://github.com/sora-xor/ethers-rs", branch = "sora-v1.6.0", features = [
   "ws",
   "rustls",
@@ -68,6 +68,6 @@ assets-rpc = { path = "../pallets/assets/rpc" }
 assets-runtime-api = { path = "../pallets/assets/runtime-api" }
 eth-bridge = { path = "../pallets/eth-bridge" }
 bridge-channel-rpc = { path = "../pallets/trustless-eth-bridge/channel/rpc" }
-substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier", default-features = false }
+substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge", default-features = false }
 rand = "0.8.5"
 mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.3.2", default-features = false }
