--- a/relayer/substrate-gen/Cargo.toml
+++ b/relayer/substrate-gen/Cargo.toml
@@ -21,9 +21,9 @@ common = { path = "../../common" }
 subxt = "0.24.0"
 codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
 scale-info = { version = "2", features = ["derive"] }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier" }
-bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier", default-features = false }
-beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge" }
+bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge", default-features = false }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge", default-features = false }
 beefy-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 jsonrpsee = { version = "0.14", features = [
     "macros",
