--- a/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
@@ -41,8 +41,8 @@ bridge-outbound-channel = { path = "../channel/outbound", default-features = fal
 [dev-dependencies]
 bridge-outbound-channel = { path = "../channel/outbound", default-features = false }
 dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "develop" }
-sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
+sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
+pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits" }
 common = { path = "../../../common", features = ["test"] }
