--- a/Cargo.toml
+++ b/Cargo.toml
@@ -223,6 +223,7 @@ members = [
     "pallets/ceres-staking",
     "pallets/ceres-token-locker",
     "pallets/faucet",
+    "pallets/hermes-governance-platform",
     "pallets/iroha-migration",
     "pallets/liquidity-proxy",
     "pallets/mock-liquidity-source",
