--- a/pallets/hermes-governance-platform/Cargo.toml
+++ b/pallets/hermes-governance-platform/Cargo.toml
@@ -19,6 +19,7 @@ frame-support = { git = "https://github.com/paritytech/substrate.git", branch = 
 frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
@@ -28,7 +29,6 @@ permissions = { path = "../permissions", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 hex-literal = "0.3.1"
 pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-uuid = { version = "1.2.2", features = ["v4"]}
 
 [dev-dependencies]
 assets = { path = "../assets" }
@@ -38,7 +38,6 @@ ceres-governance-platform = { path = "../ceres-governance-platform", default-fea
 demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
 hermes-governance-platform = { path = ".", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
 orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
@@ -66,7 +65,8 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
-    "pallet-timestamp/std"
+    "pallet-timestamp/std",
+    "sp-io/std"
 ]
 
 
