--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -43,32 +43,12 @@ sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkad
 static_assertions = "1.1.0"
 hex = { version = "*", default-features = false }
 hex-literal = "0.3.1"
+fastmurmur3 = "0.1.2"
 
 [dev-dependencies]
 serde_json = "1.0.41"
 
 [features]
 default = ['std']
-std = [
-    'codec/std',
-    "scale-info/std",
-    'serde',
-    'secp256k1/std',
-    'rustc-hex/std',
-    'blake2-rfc/std',
-    'num-traits/std',
-    'frame-support/std',
-    'frame-system/std',
-    'fixnum/std',
-    'pallet-timestamp/std',
-    'sp-arithmetic/std',
-    'sp-core/std',
-    'sp-io/std',
-    'sp-runtime/std',
-    'sp-std/std',
-    'currencies/std',
-    'orml-traits/std',
-    'hex/std',
-    "fixnum/std",
-]
+std = ['codec/std', "scale-info/std", 'serde', 'secp256k1/std', 'rustc-hex/std', 'blake2-rfc/std', 'num-traits/std', 'frame-support/std', 'frame-system/std', 'fixnum/std', 'pallet-timestamp/std', 'sp-arithmetic/std', 'sp-core/std', 'sp-io/std', 'sp-runtime/std', 'sp-std/std', 'currencies/std', 'orml-traits/std', 'hex/std', "fixnum/std"]
 test = []
