--- a/pallets/trustless-bridge/bridge-channel-rpc/Cargo.toml
+++ b/pallets/trustless-bridge/bridge-channel-rpc/Cargo.toml
@@ -22,5 +22,5 @@ sp-offchain = { git = "https://github.com/sora-xor/substrate.git", branch = "pol
 anyhow = "1.0"
 
 bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop" }
-bridge-outbound-channel = { path = "../outbound" }
-common = { path = "../../../../common" }
+bridge-outbound-channel = { path = "../bridge-outbound-channel" }
+common = { path = "../../../common" }
