--- a/pallets/trustless-bridge/bridge-outbound-channel/Cargo.toml
+++ b/pallets/trustless-bridge/bridge-outbound-channel/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
-name = "erc20-app"
+name = "bridge-outbound-channel"
+description = "EVM Bridge Outbound Channel"
 version = "0.1.1"
-authors = ["Snowfork <contact@snowfork.com>"]
 edition = "2021"
+authors = ["Snowfork <contact@snowfork.com>"]
+repository = "https://github.com/Snowfork/snowbridge"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-serde = { version = "1.0.130", optional = true }
+serde = { version = "1.0.101", optional = true }
 codec = { version = "3", package = "parity-scale-codec", default-features = false, features = [
     "derive",
 ] }
 scale-info = { version = "2", default-features = false, features = ["derive"] }
-hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
-rlp = { version = "0.5.2", default-features = false }
-hex-literal = { version = "0.3.1", default-features = false }
+hex-literal = { version = "0.3.1", optional = true }
+rlp = { version = "0.5.2", default-features = false, optional = true }
 
 frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false, optional = true }
 frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
@@ -24,61 +25,51 @@ sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkado
 sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
-
 assets = { path = "../../assets", default-features = false }
-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
-permissions = { path = "../../permissions", default-features = false }
 common = { path = "../../../common", default-features = false }
+permissions = { path = "../../permissions", default-features = false }
+traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 technical = { path = "../../technical", default-features = false }
 
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false }
 ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
 
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false }
-
-dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false, optional = true }
-bridge-outbound-channel = { path = "../channel/outbound", default-features = false, optional = true }
-
 [dev-dependencies]
-bridge-outbound-channel = { path = "../channel/outbound", default-features = false }
-dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "develop" }
-sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
+permissions = { path = "../../permissions" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits" }
 common = { path = "../../../common", features = ["test"] }
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
+sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 hex-literal = { version = "0.3.1" }
+rlp = { version = "0.5.2" }
 
 [features]
 default = ["std"]
 std = [
     "serde",
-    "hex/std",
     "codec/std",
     "scale-info/std",
     "frame-support/std",
     "frame-system/std",
     "sp-core/std",
+    "sp-runtime/std",
     "sp-std/std",
     "sp-io/std",
-    "sp-runtime/std",
     "bridge-types/std",
-
-    "frame-benchmarking/std",
-    "dispatch/std",
-    "bridge-outbound-channel/std",
-    "assets/std",
+    "ethabi/std",
+    "common/std",
+    "traits/std",
     "technical/std",
     "permissions/std",
-    "common/std",
-
-    "ethabi/std",
-    "rlp/std",
+    "assets/std",
 ]
 runtime-benchmarks = [
+    "bridge-types/runtime-benchmarks",
     "frame-benchmarking",
-    "dispatch/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
-    "bridge-outbound-channel/runtime-benchmarks",
+    "hex-literal",
+    "rlp",
 ]
