--- a/pallets/referrals/Cargo.toml
+++ b/pallets/referrals/Cargo.toml
@@ -28,10 +28,10 @@ traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library
 
 [dev-dependencies]
 common = { path = "../../common", features = ["test"] }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
 permissions = { path = "../permissions" }
@@ -50,6 +50,8 @@ runtime-benchmarks = [
 std = [
     "codec/std",
     "scale-info/std",
+    "assets/std",
+    "common/std",
     "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
