--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/main.rs"
 derive_more = "0.99.13"
 exit-future = "0.2.0"
 futures = { version = "0.3.1", features = ["compat"] }
+futures-timer = "3.0.2"
 log = "0.4.8"
 parking_lot = "0.12.0"
 trie-root = "0.16.0"
