--- a/pallets/multicollateral-bonding-curve-pool/Cargo.toml
+++ b/pallets/multicollateral-bonding-curve-pool/Cargo.toml
@@ -19,7 +19,7 @@ currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-lib
 frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false, optional = true }
-hex-literal = { version = "0.3.1", optional = true }
+hex-literal = "0.3.1"
 orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 serde = { version = "1.0.101", default-features = false, optional = true, features = [
     "derive",
