--- a/.github/ISSUE_TEMPLATE/NEW_FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/NEW_FEATURE.yml
@@ -49,7 +49,7 @@ body:
       label: Flow
       description: Can you provide any flow (and alternative flow if required) for the execution of the feature ?
       placeholder: |
-        1. The user choses the amount of XOR that he/she wants to stake
+        1. The user chooses the amount of XOR that they want to stake
         2. The system locks the chosen amount of XOR from the user's account
         3. ...
 
