--- a/.github/ISSUE_TEMPLATE/SPIKE_RESEARCH.yml
+++ b/.github/ISSUE_TEMPLATE/SPIKE_RESEARCH.yml
@@ -13,7 +13,7 @@ body:
     id: spike-problem
     attributes:
       label: Problem statement
-      description: What information is missing so that we need to research a subject further before continuing the work ? What is the problem statement ?
+      description: What information is missing that we need to further research before continuing to work? What is the problem statement?
       placeholder: |
         We don''t understand how technology X works and so we cannot implement Y.
         - What does Z do in technology X
