--- a/pallets/order-book/Cargo.toml
+++ b/pallets/order-book/Cargo.toml
@@ -29,14 +29,8 @@ pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch =
 [dev-dependencies]
 sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
-framenode-chain-spec = { path = "../../node/chain_spec", features = [
-	"test",
-	"wip",
-] }
-framenode-runtime = { path = "../../runtime", default-features = false, features = [
-	"std",
-	"wip",
-] }
+framenode-chain-spec = { path = "../../node/chain_spec", features = ["test"] }
+framenode-runtime = { path = "../../runtime", default-features = false, features = ["std"] }
 
 [features]
 default = ["std"]
@@ -62,4 +56,7 @@ runtime-benchmarks = [
 
 try-runtime = ["frame-support/try-runtime"]
 
-wip = []
+wip = [
+    "framenode-chain-spec/wip",
+    "framenode-runtime/wip",
+]
