--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -37,7 +37,7 @@ liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 eth-bridge = { path = "../eth-bridge", default-features = false }
 referrals = { path = "../referrals", default-features = false }
 
-pallet-staking = { git = "https://github.com/sora-xor/substrate.git", default-features = false, branch = "polkadot-v0.9.38", optional = true }
+pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
 sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
 permissions = { path = "../permissions", default-features = false, optional = true }
 pool-xyk = { path = "../pool-xyk", default-features = false, optional = true }
