--- a/pallets/order-book/Cargo.toml
+++ b/pallets/order-book/Cargo.toml
@@ -12,7 +12,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
-	"derive",
+    "derive",
 ] }
 scale-info = { version = "2", default-features = false, features = ["derive"] }
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
@@ -25,6 +25,7 @@ common = { path = "../../common", default-features = false }
 technical = { path = "../technical", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
+tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
@@ -35,21 +36,21 @@ framenode-runtime = { path = "../../runtime", default-features = false, features
 [features]
 default = ["std"]
 std = [
-	"assets/std",
-	"common/std",
-	"codec/std",
-	"frame-support/std",
-	"frame-system/std",
-	"pallet-timestamp/std",
-	"scale-info/std",
-	"sp-runtime/std",
-	"sp-std/std",
-	"technical/std",
-	"trading-pair/std",
+    "assets/std",
+    "common/std",
+    "codec/std",
+    "frame-support/std",
+    "frame-system/std",
+    "pallet-timestamp/std",
+    "scale-info/std",
+    "sp-runtime/std",
+    "sp-std/std",
+    "technical/std",
+    "trading-pair/std",
 ]
 
 runtime-benchmarks = [
-	"frame-benchmarking",
+    "frame-benchmarking",
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
